<resources>
    <string name="app_name">EcommerceConceptTestExcercise</string>
    <string name="select_category">Select Category</string>
    <string name="view_all">view all</string>
    <string name="hot_sales">Hot sales</string>
    <string name="best_seller">Best Seller</string>
    <string name="see_more">see more</string>
    <string name="text_new">NEW</string>
    <string name="buy_now">Buy now!</string>
    <string name="filter_options">Filter options</string>
    <string name="done">Done</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="product_details">Product Details</string>
    <string name="show_details">Show Details</string>
    <string name="select_color_and_capacity">Select color and capacity</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="explorer">Explorer</string>
    <string name="cart">Cart</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="my_cart">My Cart</string>
    <string name="checkout">Checkout</string>
    <string name="total">Total</string>
    <string name="delivery">Delivery</string>

    <string-array name="bottom_sheet_spinner_brand">
        <item>Samsung</item>
        <item>Iphone</item>
        <item>Xiaomi</item>
    </string-array>
    <string-array name="bottom_sheet_spinner_price">
        <item>$300-$500</item>
        <item>$500-$1000</item>
        <item>$1000-$10000</item>
    </string-array>
    <string-array name="bottom_sheet_spinner_size">
        <item>4.5 to 5.5 inches</item>
        <item>5.5 to 6.5 inches</item>
        <item>above 6.5 inches</item>
    </string-array>
</resources>