<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/ecommerce_menu_height"
    android:background="@color/ecommerce_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/category_title"
                style="@style/large_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_side"
                android:layout_marginTop="@dimen/margin_top_common_item"
                android:text="@string/select_category"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/category_view_all"
                style="@style/button_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_text_button"
                android:layout_marginEnd="@dimen/margin_end_button"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/view_all"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_side"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="@dimen/margin_side"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/category_title"
                tools:itemCount="1"
                tools:listitem="@layout/item_category" />

            <TextView
                android:id="@+id/hot_sales_title"
                style="@style/large_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_side"
                android:layout_marginTop="@dimen/margin_top_common_item"
                android:text="@string/hot_sales"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recycler_category" />

            <TextView
                android:id="@+id/hot_sales_see_more"
                style="@style/button_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_text_button"
                android:layout_marginEnd="@dimen/margin_end_button"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/see_more"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recycler_category" />

            <androidx.cardview.widget.CardView
                android:id="@+id/hot_sales_card_view"
                android:layout_width="0dp"
                android:layout_height="182dp"
                android:layout_marginStart="@dimen/margin_start_hot_sales"
                android:layout_marginTop="@dimen/margin_top_common_item"
                android:layout_marginEnd="@dimen/margin_end_hot_sales"
                android:backgroundTint="@color/black"
                app:cardCornerRadius="@dimen/corner_radius_card_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/hot_sales_title"
                card_view:elevation="0dp">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/hot_sales_view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/best_seller_title"
                style="@style/large_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_side"
                android:layout_marginTop="@dimen/margin_top_common_item"
                android:text="@string/best_seller"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/hot_sales_card_view" />

            <TextView
                android:id="@+id/best_seller_see_more"
                style="@style/button_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_text_button"
                android:layout_marginEnd="@dimen/margin_end_button"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/see_more"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/hot_sales_card_view" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_best_seller"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_side"
                android:layout_marginTop="@dimen/margin_top_common_item"
                android:layout_marginEnd="@dimen/margin_side"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/best_seller_title"
                tools:listitem="@layout/item_best_seller" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="visible" />
</FrameLayout>