<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="60dp"
    android:background="@color/ecommerce_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/back_button_margin_start"
            android:layout_marginTop="@dimen/cart_buttons_margin_top"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back" />

        <TextView
            style="@style/text_my_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/back_button_margin_start"
            android:text="@string/my_cart" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        style="@style/text_my_cart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/cart_buttons_margin_top"
        android:text="@string/my_cart"
        app:cardBackgroundColor="@color/ecommerce_on_background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bottom_app_bar_background">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cart_recycler_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="13dp"
                android:layout_marginBottom="15dp"
                app:layout_constraintBottom_toTopOf="@id/total"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/item_cart" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="15dp"
                android:background="@color/ecommerce_background25"
                app:layout_constraintBottom_toTopOf="@id/total"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="parent" />

            <TextView
                android:id="@+id/total"
                style="@style/checkout_left_my_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginBottom="12dp"
                android:text="@string/total"
                app:layout_constraintBottom_toTopOf="@id/delivery"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/delivery"
                style="@style/checkout_left_my_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginBottom="53dp"
                android:text="@string/delivery"
                app:layout_constraintBottom_toTopOf="@id/button_checkout"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/price"
                style="@style/checkout_right_my_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="55dp"
                android:layout_marginBottom="12dp"
                app:layout_constraintBottom_toTopOf="@id/delivery_price"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="$6,000" />

            <TextView
                android:id="@+id/delivery_price"
                style="@style/checkout_right_my_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="55dp"
                android:layout_marginBottom="53dp"
                app:layout_constraintBottom_toTopOf="@id/button_checkout"
                app:layout_constraintStart_toStartOf="@id/price"
                tools:text="Free" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="27dp"
                android:background="@color/ecommerce_background20"
                app:layout_constraintBottom_toTopOf="@id/button_checkout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="parent" />

            <Button
                android:id="@+id/button_checkout"
                style="@style/text_details_bottom_sheet_add_to_cart"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_add_to_cart_height"
                android:layout_marginStart="@dimen/checkout_margin"
                android:layout_marginEnd="@dimen/checkout_margin"
                android:layout_marginBottom="@dimen/checkout_margin"
                android:backgroundTint="@color/ecommerce_orange"
                android:text="@string/checkout"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>